# personal-site

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
personal_site/: hosts.py  manage.py  pytest.ini
personal_site/personal_site/: asgi.py  blog_urls.py  urls.py  wsgi.py
personal_site/personal_site/settings/: __init__.py  base.py  dev.py  production.py  test.py  types.py
personal_site/personal_site/templates/: base.html
personal_site/tests/: conftest.py
